# ggpk-index-server

./: .gitignore  Cargo.toml  Dockerfile  docker-deps.sh  package-lock.json  package.json  render.yaml  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: deploy.yml
src/: main.rs
src/index/: collector.rs  ggpk.rs  mod.rs  state.rs  updater.rs
src/routes/: browse.rs  mod.rs  version.rs
worker/: index.ts
