[package]
name = "ggpk-index-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
tempfile = "3.14.0"
tantivy = "0.22.0"
url = "2.5.4"
anyhow = { version = "1.0.94", features = ["backtrace"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "http2", "charset"] }
oozextract = "0.5.0"
murmurhash64 = "0.3.1"
mime_guess = "2.0.5"
csv = "1.3.1"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.35"
